--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 				<li>Deploy</li>
 				<li>Merge</li>
 			</ul>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 		<section class="main-section" id="Create_a_branch">
 			<header>
@@ -58,6 +61,9 @@
 			<p>When you create a branch in your project, you're creating an environment where you can try out new ideas. Changes you make on a branch don't affect the <code>master</code> branch, so you're free to experiment and commit changes, safe in the knowledge that your branch won't be merged until it's ready to be reviewed by someone you're collaborating with.</p>
 			<p>Branching is a core concept in Git, and the entire GitHub flow is based upon it. There's only one rule: anything in the <code>master</code> branch is always deployable.</p>
 			<p>Because of this, it's extremely important that your new branch is created off of master when working on a feature or a fix. Your branch name should be descriptive (e.g., <code>refactor-authentication</code>, <code>user-content-cache-key</code>, <code>make-retina-avatars</code>), so that others can see what is being worked on.</p>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 		<section class="main-section" id="Add_commits">
 			<header>
@@ -66,6 +72,9 @@
 			<p>Once your branch has been created, it's time to start making changes. Whenever you add, edit, or delete a file, you're making a commit, and adding them to your branch. This process of adding commits keeps track of your progress as you work on a feature branch.</p>
 			<p>Commits also create a transparent history of your work that others can follow to understand what you've done and why. Each commit has an associated commit message, which is a description explaining why a particular change was made. Furthermore, each commit is considered a separate unit of change. This lets you roll back changes if a bug is found, or if you decide to head in a different direction.</p>
 			<p>Commit messages are important, especially since Git tracks your changes and then displays them as commits once they're pushed to the server. By writing clear commit messages, you can make it easier for other people to follow along and provide feedback.</p>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 		<section class="main-section" id="Open_a_Pull_Request">
 			<header>
@@ -74,6 +83,9 @@
 			<p>Pull Requests initiate discussion about your commits. Because they're tightly integrated with the underlying Git repository, anyone can see exactly what changes would be merged if they accept your request.</p>
 			<p>You can open a Pull Request at any point during the development process: when you have little or no code but want to share some screenshots or general ideas, when you're stuck and need help or advice, or when you're ready for someone to review your work. By using GitHub's @mention system in your Pull Request message, you can ask for feedback from specific people or teams, whether they're down the hall or ten time zones away.</p>
 			<p>Pull Requests are useful for contributing to open source projects and for managing changes to shared repositories. If you're using a Fork & Pull Model, Pull Requests provide a way to notify project maintainers about the changes you'd like them to consider. If you're using a Shared Repository Model, Pull Requests help start code review and conversation about proposed changes before they're merged into the master branch.</p>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 		<section class="main-section" id="Discuss_and_review_your_code">
 			<header>
@@ -82,6 +94,9 @@
 			<p>Once a Pull Request has been opened, the person or team reviewing your changes may have questions or comments. Perhaps the coding style doesn't match project guidelines, the change is missing unit tests, or maybe everything looks great and props are in order. Pull Requests are designed to encourage and capture this type of conversation.</p>
 			<p>You can also continue to push to your branch in light of discussion and feedback about your commits. If someone comments that you forgot to do something or if there is a bug in the code, you can fix it in your branch and push up the change. GitHub will show your new commits and any additional feedback you may receive in the unified Pull Request view.</p>
 			<p>Pull Request comments are written in Markdown, so you can embed images and emoji, use pre-formatted text blocks, and other lightweight formatting.</p>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 		<section class="main-section" id="Deploy">
 			<header>
@@ -89,6 +104,9 @@
 			</header>
 			<p>With GitHub, you can deploy from a branch for final testing in production before merging to master.</p>
 			<p>Once your pull request has been reviewed and the branch passes your tests, you can deploy your changes to verify them in production. If your branch causes issues, you can roll it back by deploying the existing master into production.</p>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 		<section class="main-section" id="Merge">
 			<header>
@@ -97,6 +115,9 @@
 			<p>Now that your changes have been verified in production, it is time to merge your code into the master branch.</p>
 			<p>Once merged, Pull Requests preserve a record of the historical changes to your code. Because they're searchable, they let anyone go back in time to understand why and how a decision was made.</p>
 			<p>By incorporating certain keywords into the text of your Pull Request, you can associate issues with code. When your Pull Request is merged, the related issues are also closed. For example, entering the phrase <code>Closes #32</code> would close issue number 32 in the repository.</p>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 		<section class="main-section" id="Reference">
 			<header>
@@ -107,9 +128,13 @@
 				<li><a href="https://help.github.com/" target="_blank">GitHub Help</a></li>
 				<li><a href="https://www.youtube.com/githubguides" target="_blank">Video Guides</a></li>
 			</ul>
+			<div class="toTop">
+				<a href="#top" class="top">Top</a>
+			</div>
 		</section>
 	</main>
 	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
 </body>
 
 </html>
